--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BlogApp</title>
+    <title>TweetApp</title>
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <header>
+      <div class="header-logo">
+        <%= link_to("Blog_app", "/") %>
+      </div>
+      <ul class="header-menus">
+      
+      <li>
+      <%= link_to("投稿一覧", "/posts/index") %>
+    </li>
+    <li>
+      <%= link_to("新規投稿", "/posts/new") %>
+    </li>
+    <li>
+      <%= link_to("ユーザー一覧", "/users/index") %>
+    </li>
+
+    <li>
+      <%= link_to("新規登録", "/signup") %>
+    </li>
+    <li>
+      <%= link_to("ログイン", "/login") %>
+    </li>
+      </ul>
+    </header>
     <%= yield %>
   </body>
 </html>
